@@ -1,3 +1,15 @@
+2021-03-26  Jonathan Bedard  <jbedard@apple.com>
+
+        Unreviewed, reverting r275081.
+
+        Broke Apple Internal builds
+
+        Reverted changeset:
+
+        "Avoid calling `xcodebuild -showsdks` where possible."
+        https://bugs.webkit.org/show_bug.cgi?id=223727
+        https://commits.webkit.org/r275081
+
 2021-03-26  Jean-Yves Avenard  <jya@apple.com>
 
         Fix NowPlayingInfoArtwork operator== logic.
